force-app/main/default/objects/Lead/fields/Automatic_Owner_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Owner_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. ZRD
3. Field to indicate, if the automatic Owner assignment based on Territory should be started</description>
    <label>Automatic Owner Assignment</label>
    <type>Checkbox</type>
</CustomField>