force-app/main/default/objects/Lead/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <description>1. Not integration relevant
2. ZR
3, Helper field to determine, if a Lead has been converted</description>
    <formula>IF(ISPICKVAL(Status, &quot;Converted&quot;)||ISPICKVAL(Status, &quot;New&quot;)||ISPICKVAL(Status, &quot;Qualification&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>