force-app/main/default/objects/Lead/fields/Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Date__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-956. Helper Field for Email Notification regarding deletion.</description>
    <formula>IF(  IsConverted  = FALSE,  CreatedDate + 366, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deletion Date</label>
    <type>Date</type>
</CustomField>