force-app/main/default/objects/Lead/fields/Deletion_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Not integration relevant
2. ZRD
3. SF-956. Helper Field to not send Email for Deletion multiple times.</description>
    <label>Deletion Email Sent</label>
    <type>Checkbox</type>
</CustomField>