force-app/main/default/objects/Lead/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <description>1. Integration relevant (XFAIR)
2. ZRD
3. SF-323</description>
    <label>Demand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Construction Devices</fullName>
            </value>
            <value>
                <fullName>Construction Logistics</fullName>
            </value>
            <value>
                <fullName>Construction Machinery</fullName>
            </value>
            <value>
                <fullName>Electricity, Climate, Water</fullName>
                <isActive>false</isActive>
                <label>Electricity, Climate, Water</label>
            </value>
            <value>
                <fullName>Elevators</fullName>
            </value>
            <value>
                <fullName>Energy Climate Water</fullName>
                <label>Energy, Climate, Water</label>
            </value>
            <value>
                <fullName>Forklifts</fullName>
            </value>
            <value>
                <fullName>Industrial Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Room Systems</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Working Platforms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>