force-app/main/default/objects/Lead/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <description>1. Integration relevant (XFAIR)
2. ZR
3. This field is used instead of the standard field to be able to map the E-Mail-Address to the Account</description>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>