force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>1. Integration relevant (XFAIR)
2. ZR
3.</description>
    <inlineHelpText>Title/ Role/ Function means e.g. General Manager</inlineHelpText>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Role</valueSetName>
    </valueSet>
</CustomField>