force-app/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to determine the average age of Leads in reports.</description>
    <formula>IF( IsConverted = TRUE,  ConvertedDate -   DATEVALUE(CreatedDate), TODAY() -  DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>