force-app/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>1. Not integration relevant
2. ZR-742
3. Helper Field to display the Lead Id on the converted Opportunity</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>