force-app/main/default/objects/Lead/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <description>1. Integration relevant (XFAIR)
2. ZR
3.</description>
    <inlineHelpText>Please enter the business segment for which this lead has potential.</inlineHelpText>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential</valueSetName>
    </valueSet>
</CustomField>