force-app/main/default/objects/Lead/fields/Potential_Revenue_Year__c.field-meta.xml
<CustomField>
    <fullName>Potential_Revenue_Year__c</fullName>
    <description>1. Integration relevant (XFAIR)
2. ZRD
3. SF-323</description>
    <label>Potential Revenue / Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>