force-app/main/default/objects/Lead/fields/Reason_for_Disqualification__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disqualification__c</fullName>
    <description>1. Integration irrelevant
2. ZR
3.</description>
    <label>Reason for Disqualification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Content</fullName>
            </value>
            <value>
                <fullName>Wrong Line of Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>