force-app/main/default/objects/Lead/fields/Save_without_Email__c.field-meta.xml
<CustomField>
    <fullName>Save_without_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration irrelevant
2. ZR
3. Use this field to disable the validation rule that is set on the Email address field to save an account without an email address</description>
    <inlineHelpText>If you want to save a Lead without an Email or Personal Email address please check this box.</inlineHelpText>
    <label>Save without Email</label>
    <type>Checkbox</type>
</CustomField>