force-app/main/default/objects/Lead/fields/Territory_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Territory_Level_1__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-660</description>
    <label>Territory Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>