force-app/main/default/objects/Lead/fields/WZ_Code__c.field-meta.xml
<CustomField>
    <fullName>WZ_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration irrelevant
2. ZR
3.</description>
    <label>WZ Code</label>
    <referenceTo>Core_WZ_Code__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>