force-app/main/default/objects/Lead/validationRules/ZR_AddressMandatory_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_AddressMandatory_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule ensures, that address information is entered before a lead can be set into the status &apos;Qualified&apos; or &apos;Converted&apos;</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;), ISBLANK(Street)|| ISBLANK(PostalCode)|| ISBLANK(City)|| ISBLANK(Country),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>City</errorDisplayField>
    <errorMessage>Please enter address-information into the fields Street, Postal Code, City and Country to qualify this lead.</errorMessage>
</ValidationRule>