force-app/main/default/objects/Lead/validationRules/ZR_Company_Emaillength_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_Company_Emaillength_Lead</fullName>
    <active>true</active>
    <description>SF-130 This validation rule should enforce a field lengths of maximum 60 characters for this Email-field.</description>
    <errorConditionFormula>LEN(Email_2__c) &gt;= 60
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Email_2__c</errorDisplayField>
    <errorMessage>Please enter less than 60 characters.</errorMessage>
</ValidationRule>