force-app/main/default/objects/Lead/validationRules/ZR_DepartmentMandatory_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_DepartmentMandatory_Lead</fullName>
    <active>false</active>
    <description>SF-158 This validation rule ensure, that a department is added as soon as a lead reaches the stage &apos;Qualification&apos; or &apos;Converted&apos;.</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;), ISPICKVAL( Department__c , &quot;&quot;), FALSE)
&amp;&amp; $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a department to successfully qualify this lead.</errorMessage>
</ValidationRule>