force-app/main/default/objects/Lead/validationRules/ZR_FirstNameMandatory_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_FirstNameMandatory_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule ensures, that a first name is entered on a lead, if the status &apos;Qualified&apos; or &apos;Converted&apos; is selected.</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;), ISBLANK( FirstName ), FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter a first name to successfully qualify this lead.</errorMessage>
</ValidationRule>