force-app/main/default/objects/Lead/validationRules/ZR_PhoneorMobilMandatory_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_PhoneorMobilMandatory_Lead</fullName>
    <active>true</active>
    <description>SF-158 This rule ensures, that for every contact either the phone or the mobile number is entered,</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;), AND(ISBLANK(MobilePhone), ISBLANK(Phone)),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid phone number in at least one of the fields &apos;Mobile&apos; or &apos;Phone&apos; to successfully qualify this lead.</errorMessage>
</ValidationRule>