force-app/main/default/objects/Lead/validationRules/ZR_Potential_Mandatory_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_Potential_Mandatory_Lead</fullName>
    <active>true</active>
    <description>SF-738 This validation rule ensure, that a Potential is added as soon as a lead reaches the stage &apos;Qualification&apos; or &apos;Converted&apos;.</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;), ISPICKVAL( Potential__c , &quot;&quot;), FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Potential__c</errorDisplayField>
    <errorMessage>Please enter a Business Area to successfully qualify this lead.</errorMessage>
</ValidationRule>