force-app/main/default/objects/Lead/validationRules/ZR_SalutationMandatory_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_SalutationMandatory_Lead</fullName>
    <active>true</active>
    <description>SF-158 This rule ensures, that the salutation on the contact is always filled.</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;), ISPICKVAL(Salutation, &quot;&quot;), FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Please enter a salutation to successfully qualify this lead.</errorMessage>
</ValidationRule>