force-app/main/default/objects/Lead/validationRules/ZR_SaveWithoutEmail_2_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_SaveWithoutEmail_2_Lead</fullName>
    <active>true</active>
    <description>SF-158 Informs the user that if they want to save a lead without an email address they need to check the checkbox &quot;Save without Email&quot;</description>
    <errorConditionFormula>IF(ISPICKVAL(Status, &quot;Qualification&quot;)||ISPICKVAL(Status, &quot;Converted&quot;),(AND (ISBLANK(Email_2__c), Save_without_Email__c = false)), FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Email_2__c</errorDisplayField>
    <errorMessage>You are about to save this Lead without an email address. If this is correct please confirm with &quot;Save without Email&quot; and add the email address as soon as it is known.</errorMessage>
</ValidationRule>