force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_99999_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_99999_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{5}&quot;). Example: 99999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( PostalCode )),
OR(
Country == &quot;DZ&quot;,
Country == &quot;AS&quot;,
Country == &quot;BA&quot;,
Country == &quot;BR&quot;,
Country == &quot;IC&quot;,
Country == &quot;MP&quot;,
Country == &quot;HR&quot;,
Country == &quot;CU&quot;,
Country == &quot;EE&quot;,
Country == &quot;FI&quot;,
Country == &quot;FR&quot;,
Country == &quot;GF&quot;,
Country == &quot;DE&quot;,
Country == &quot;GP&quot;,
Country == &quot;GU&quot;,
Country == &quot;ID&quot;,
Country == &quot;IT&quot;,
Country == &quot;LT&quot;,
Country == &quot;MY&quot;,
Country == &quot;MH&quot;,
Country == &quot;MQ&quot;,
Country == &quot;YT&quot;,
Country == &quot;FM&quot;,
Country == &quot;MC&quot;,
Country == &quot;ME&quot;,
Country == &quot;MA&quot;,
Country == &quot;NC&quot;,
Country == &quot;PK&quot;,
Country == &quot;PW&quot;,
Country == &quot;RE&quot;,
Country == &quot;SM&quot;,
Country == &quot;RS&quot;,
Country == &quot;ES&quot;,
Country == &quot;TH&quot;,
Country == &quot;TR&quot;,
Country == &quot;UA&quot;,
Country == &quot;US&quot;,
Country == &quot;VI&quot;
)),
NOT(REGEX(PostalCode, (&quot;\\d{5}&quot;))), FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of five numbers. Example: 99999</errorMessage>
</ValidationRule>