force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_999_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}&quot;). Example: 999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK( PostalCode )),
OR(
Country == &quot;FO&quot;,
Country == &quot;IS&quot;,
Country == &quot;MG&quot;,
Country == &quot;PG&quot;
)),
NOT(REGEX(PostalCode, (&quot;\\d{3}&quot;))),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of three numbers. Example: 999</errorMessage>
</ValidationRule>