force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_AD_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_AD_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z]{2}\\d{3}&quot;). Example: AA999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(PostalCode )),
Country == &quot;AD&quot;),
NOT(REGEX(PostalCode, (&quot;[A-Z]{2}\\d{3}&quot;))),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of two uppercase letters and three numbers. Example: AA999</errorMessage>
</ValidationRule>