force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_AZ_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_AZ_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{4}&quot;) or (&quot;\\d{6}&quot;). Example: 9999 or 999999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(PostalCode )),
Country == &quot;AZ&quot;),
NOT(
OR(
REGEX(PostalCode, (&quot;\\d{4}&quot;)),
REGEX(PostalCode, (&quot;\\d{6}&quot;))
)
),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of four or six numbers. Example: 9999 or 999999</errorMessage>
</ValidationRule>