force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_BR_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_BR_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{8}&quot;) or (&quot;\\d{5}[-]\\d{3}&quot;). Example: 99999999 or 99999-999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(PostalCode )),
Country == &quot;BR&quot;),
NOT(
OR(
REGEX(PostalCode,(&quot;\\d{8}&quot;)),
REGEX(PostalCode,(&quot;\\d{5}[-]\\d{3}&quot;))
)
),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of eight numbers and can include a hyphen between the fifth and the sixth number. Example: 99999999 or 99999-999.</errorMessage>
</ValidationRule>