force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_CA_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_CA_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z][0-9][A-Z][ ][0-9][A-Z][0-9]&quot;) or (&quot;[A-Z][0-9][A-Z][ ][0-9][A-Z]&quot;). Example: A9A 9A9 or A9A 9A</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(PostalCode )),
Country == &quot;CA&quot;),
NOT(
OR(
REGEX(PostalCode, (&quot;[A-Z][0-9][A-Z][ ][0-9][A-Z][0-9]&quot;)),
REGEX(PostalCode, (&quot;[A-Z][0-9][A-Z][ ][0-9][A-Z]&quot;))
)
),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of an uppercase letter, a number, an uppercase letter followed by a space, a number, an uppercase letter and optional number. Example: A9A 9A9 or A9A 9A</errorMessage>
</ValidationRule>