force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_GB_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_GB_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(PostalCode )),
Country == &quot;GB&quot;),
NOT(
OR(
REGEX(PostalCode, (&quot;[A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(PostalCode, (&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(PostalCode, (&quot;[A-Z][A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(PostalCode, (&quot;[A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(PostalCode, (&quot;[A-Z][0-9][A-Z][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(PostalCode, (&quot;[A-Z][A-Z][0-9][A-Z][ ][0-9][A-Z][A-Z]&quot;))
)
),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should follow one of these examples: A9 9AA, AA9 9AA, AA99 9AA, A99 9AA, A9A 9AA or AA9A 9AA.</errorMessage>
</ValidationRule>