force-app/main/default/objects/Lead/validationRules/ZR_ZipCode_Validation_GG_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_GG_Lead</fullName>
    <active>true</active>
    <description>SF-158 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;) or (&quot;[A-Z][A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;). Example: AA9 9AA or AA99 9AA.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(PostalCode )),
Country == &quot;GG&quot;),
NOT(
OR(
REGEX(PostalCode,(&quot;[A-Z][A-Z][0-9][ ][0-9][A-Z][A-Z]&quot;)),
REGEX(PostalCode,(&quot;[A-Z][A-Z][0-9][0-9][ ][0-9][A-Z][A-Z]&quot;))
)
),FALSE)
&amp;&amp;  $Permission.Core_Lead_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please enter a valid format for the Zip Code! This should follow one of these examples: AA9 9AA or AA99 9AA.</errorMessage>
</ValidationRule>